deployment/health-check.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
      - name: nodejs
        image: nerdeveloper/web
        ports:
        - name:  nodejs-port
          containerPort: 3000
        resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
        livenessProbe: 
          httpGet:
            path: /health-check
            port: nodejs-port
          initialDelaySeconds: 15
          timeoutSeconds: 30
