deployment/helloworld-secrets-volume.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
      - name: nodejs
        image: nerdeveloper/web
        ports:
        - name: nodejs-port
          containerPort: 3000
        volumeMounts:
          - name:  cred-volume
            mountPath:  /etc/creds
            readOnly: true
      volumes:
      - name: cred-volume
        secret:
            secretName: db-secrets
