deployment/liveness-readiness.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - name:  nodejs-port
          containerPort: 80
        livenessProbe: 
          httpGet:
            path: /
            port: nodejs-port
          initialDelaySeconds: 15
          timeoutSeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: nodejs-port
          initialDelaySeconds: 15
          timeoutSeconds: 30

---

apiVersion: v1
kind: Service
metadata:
  name: helloworld
  labels:
    run: helloworld
  annotations:
    haproxy.org/check: "enabled"
    haproxy.org/forwarded-for: "enabled"
    haproxy.org/load-balance: "roundrobin"
spec:
  selector:
    run: helloworld
  ports:
  - name: loadbalancer-port
    port: 80
    protocol: TCP
    targetPort: nodejs-port
  type: LoadBalancer

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloworld-ingress
spec:
  rules:
  - host: wow.kubernetes.jefftutors.com
    http:
      paths:
      - path: /
        backend:
          serviceName: helloworld
          servicePort: 80
